--- a/concur/resource/ServerCfg.properties
+++ b/concur/resource/ServerCfg.properties
@@ -97,6 +97,9 @@ dbcache.dbpool.capacity=4
 #服务器ID标识集合(多个以","隔开)
 dbcache.server.id.set=1,2
 
+#延迟入库时间间隔(毫秒)
+dbcache.delay.timmer=5000
+
 ######################################
 #防沉迷 相关配置
 ######################################
