--- a/concur/resource/jdbc.properties
+++ b/concur/resource/jdbc.properties
@@ -2,7 +2,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 
 jdbc.url=jdbc:mysql://localhost/test?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
 jdbc.username=root
-jdbc.password=
+jdbc.password=123
 
 
 #jdbc.url=jdbc:mysql://192.168.10.149/sanguohun2?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
