--- a/concur/pom.xml
+++ b/concur/pom.xml
@@ -91,9 +91,9 @@
 			<version>1.2.3</version>
 		</dependency>
 		<dependency>
-			<groupId>asm</groupId>
-			<artifactId>asm</artifactId>
-			<version>3.3.1</version>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-all</artifactId>
+			<version>5.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>javassist</groupId>
