--- a/concur/pom.xml
+++ b/concur/pom.xml
@@ -69,7 +69,11 @@
 			<artifactId>concurrentlinkedhashmap-lru</artifactId>
 			<version>1.4.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
