配置文件修改

--- a/concur/resource/ServerCfg.properties
+++ b/concur/resource/ServerCfg.properties
@@ -53,7 +53,7 @@ server.cross.key=My9yuKey
 #inner ip
 server.inner.ip=192.168.10.*
 # login encode key
-server.login.key=Mogong_gs_login_Key_kElwlkaIoejEkAkeOEkrne
+server.login.key=LoginKey
 
 
 ######################################
@@ -107,20 +107,20 @@ dbcache.delay.timmer=5000
 # agent name
 server.agent=tecent
 # game name
-server.game=sgh
+server.game=abc
 # server name
 server.server=S1
 #is fcm  0-no 1-yes
 server.fcm=0
 # fcm server key
-server.fcm.key=My9YuKey-FCM-LONG
+server.fcm.key=FCM-KEY
 # api uri
 server.fcm.url=http://fcm.game.e2playing.com/game/serviceReceiveOnline?online=%s&gamename=%s&gameserver=%s&username=%s&time=%s&flag=%s&agent=%s
 ######################################
 #礼包相关配置
 ######################################
 
-server.sequence.key=My9YuKey
+server.sequence.key=SequenceKey
 server.sequence.url=http://192.168.10.221:8080/gift_server/check
 
 ######################################
