--- a/concur/pom.xml
+++ b/concur/pom.xml
@@ -242,6 +242,11 @@
 			<artifactId>netty</artifactId>
 			<version>3.2.10.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.4.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
