--- a/concur/.classpath
+++ b/concur/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="src" path="src-socket"/>
 	<classpathentry kind="src" path="src-utils"/>
 	<classpathentry kind="src" path="src-transfer"/>
+	<classpathentry kind="src" path="src-basesource"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
@@ -20,5 +21,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/beautyeye_lnf.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
