--- a/concur/resource/ServerCfg.properties
+++ b/concur/resource/ServerCfg.properties
@@ -43,7 +43,7 @@ server.charge.key=ChargeKey
 ######################################
 
 #跨服key
-server.cross.key=My9yuKey
+server.cross.key=crossServerKey
 
 
 ######################################
